--- a/style.css
+++ b/style.css
@@ -83,6 +83,7 @@ main {
   position: relative;
 }
 
+/*This is for controlling the anchor element for the buttons in the header, so that they are not covered by the fixed header*/
 .content h2 span {
   position: absolute;
   top: -100px;
